# pp-arc-state

./: README_NK_WORKTRIAL.md  plan.md  plan2.md  plan3.md  pyproject.toml
mds/: CELL_LOAD_NOTES.md  (+9 more)
simulate/sergio/: .gitignore  FIXES.md  build_pert_onehot_map.py  generate_dataset.py  generate_test_set.py  grn_utils.py  pyproject.toml  run_eval_mini.sh  session_summaries.md  submit_build_merged_ppt.sh  submit_build_merged_tgt.sh  submit_eval_best_ckpt.sh  submit_eval_mini.sh  submit_eval_nca_stgt.sh  submit_eval_rpnd_all.sh  submit_eval_rpnd_fewshot.sh  submit_generate_dataset.sh  submit_generate_dataset_mini.sh  submit_generate_dataset_ppt_v2.sh  submit_generate_test_mini.sh  submit_generate_test_set.sh  submit_train_ablation.sh  submit_train_mini.sh  submit_train_mini_speedup_2000steps.sh  submit_train_nca_rpnd.sh  submit_train_nca_rpnd_fewshot.sh  submit_train_nca_stgt_v2.sh  submit_train_ppt.sh  submit_train_ppt_ckpt_test.sh  submit_train_ppt_v2.sh  submit_train_rpnd_baseline.sh  submit_train_rpnd_fewshot.sh  submit_train_sergio_tgtv2.sh  visualization_plan.md
simulate/sergio/SERGIO/: sergio.py
simulate/sergio/configs/: rpnd_fewshot.toml  rpnd_train.toml  sergio_mini_test.toml  sergio_mini_train.toml  sergio_ppt_train.toml  sergio_tgt_test.toml  sergio_tgt_train.toml  sergio_train.toml  test_mini_filelist.txt  test_mini_incl_filelist.txt
simulate/sergio/generation_configs/: dataset1.json  dataset_mini.json  dataset_mini_incl.json  dataset_ppt.json  dataset_ppt_d2.json  dataset_ppt_v2.json  dataset_tgt.json  test_mini.json  test_mini_incl.json  test_set.json
(+101 files in other folders)
