[project]
name = "sergio-simulate"
version = "0.1.0"
description = "SERGIO-based synthetic scRNA-seq data generation for State pre-pre-training"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.4.0",
    "anndata>=0.11.4",
    "cma>=4.4.4",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "scanpy>=1.11.2",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
]
